<resources>
    <string name="app_name">Gachon_Study_Room</string>
    <string name="main_name">가천열람실</string>
    <string name="option_name">옵션</string>
    <string name="login">로그인</string>
    <string name="auto_login">자동로그인</string>
    <string name="choose_or_reservation">자리 선택/예약</string>
    <string name="confirm_seat">자리 확정</string>
    <string name="confirm_my_seat">나의 자리 확인</string>
    <string name="confirm_internet">인터넷 연결을 확인해주세요.</string>
    <string name="confirm_account">계정을 확인해주세요.</string>
    <string name="confirm_id">아이디와 비밀번호를 확인하세요.</string>
    <string name="server_error">서버 에러입니다.</string>
    <string name="confirm_login">님 로그인 되었습니다.</string>
    <string name="reservation_seat">자리예약</string>
    <string name="qr">QR리더</string>
    <string name="my_seat">나의 자리</string>
    <string name="seat_location">장소 :</string>
    <string name="seat_number">좌석 번호:</string>
    <string name="seat_time">예약시간:</string>
    <string name="extend">연장</string>
    <string name="return_seat">반납</string>
    <string name="choose_seat">원하는 좌석을 선택해주세요</string>
    <string name="start_time">시작시간</string>
    <string name="end_time">종료시간</string>
    <string name="connect_fail">연결실패</string>
    <string name="seat_result">좌석상태</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="status_use">사용가능</string>
    <string name="status_reserve">예약중</string>
    <string name="status_confirm">확정됨</string>
    <string name="status_unuseable">사용불가</string>
    <string name="seat_status_reserved">좌석 상태 : 예약됨</string>
    <string name="seat_status_using">좌석 상태 : 사용중</string>
    <string name="please_reserve">예약을 진행해주세요.</string>
    <string name="time_error01">대여 시각은 현재 시각 이후부터 설정할 수 있습니다.</string>
    <string name="time_error02">종료 시각은 현재 시각 이후부터 설정할 수 있습니다.</string>
    <string name="time_error03">종료 시각은 대여 시각보다 작을 수 없습니다.</string>
    <string name="seat_error01">좌석은 하나만 선택 가능합니다.</string>
    <string name="seat_confirm">좌석을 선택해주세요.</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="hour">시</string>
    <string name="max_extend">연장은 최대 4시간 할 수 있습니다.</string>
    <string name="reserve_message">예약메시지</string>
    <string name="reserve_message01">예약하시겠습니까?</string>
    <string name="reserve_message02">좌석 예약에 성공하였습니다. 예약시간 10분전에 확정해주세요!</string>
    <string name="confirm_message">좌석 확정에 성공하였습니다.</string>
    <string name="confirm_message01">확정성공</string>
    <string name="confirm_message02">확정실패</string>
    <string name="reservation_max">최대 예약 가능 시간은 4시간 입니다.</string>
    <string name="notification">알림</string>
    <string name="logout">로그아웃</string>
    <string name="qr_refresh">QR코드를 새로고침 해주세요.</string>
    <string name="confirm_first">먼저 예약을 확정해주세요.</string>
    <string name="extension_message01">연장은</string>
    <string name="return_message">반납확인</string>
    <string name="return_message01">좌석을 반납하시겠습니까?</string>
    <string name="return_message02">반납성공!!</string>
    <string name="extension_message">연장 종료시간 :</string>
    <string name="seat_status">현재좌석 현황</string>
    <string name="extension_message02">※ 최대 연장 시간 4시간 / 종료시간 입력</string>
    <string name="confirm_extension">연장확인</string>
    <string name="current_end_time">기존 종료시간 :</string>
    <string name="logout_success">로그아웃 되셨습니다.</string>
    <string name="developers">만든이</string>
    <string name="college_open_chatting">단과대 오픈채팅</string>
    <string name="suggestions">개발자 건의사항</string>
    <string name="opensource_license">오픈소스 라이선스</string>
    <string name="partnership">제휴문의</string>
    <string name="app_version">앱 버전 정보</string>

</resources>