<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<data>
    <variable
        name="extension"
        type="com.cookandroid.gachon_study_room.ui.main.view.dialog.ExtensionDialog" />
</data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<FrameLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="300dp"
    android:layout_height="500dp"
    android:orientation="vertical">

    <HorizontalScrollView
        android:id="@+id/scrollBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:fillViewport="true"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAvailableSeat" />

    <TextView
        android:id="@+id/txtTopic"
        style="@style/BaseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/seat_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/availableSeat"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:background="@color/mainColor"
        app:layout_constraintEnd_toStartOf="@+id/txtAvailableSeat"
        app:layout_constraintTop_toTopOf="@+id/txtAvailableSeat" />

    <TextView
        android:id="@+id/txtAvailableSeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/status_use"
        app:layout_constraintEnd_toStartOf="@+id/unAvailable"
        app:layout_constraintTop_toBottomOf="@+id/txtTopic" />

    <TextView
        android:id="@+id/unAvailable"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:background="@color/unusable"
        app:layout_constraintEnd_toStartOf="@id/txtUnAvailableSeat"
        app:layout_constraintTop_toTopOf="@+id/txtUnAvailableSeat" />

    <TextView
        android:id="@+id/txtUnAvailableSeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/status_unuseable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtAvailableSeat" />

    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollBar" />

    <TextView
        android:id="@+id/txtCurrent"
        style="@style/BaseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/txtEnd"
        style="@style/BaseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCurrent" />

    <TextView
        android:id="@+id/txtConfirm"
        android:layout_width="50sp"
        android:layout_height="30sp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtCancel"
        android:layout_width="50sp"
        android:layout_height="30sp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtConfirm" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="1dp"
        android:text="@string/extension_message02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_picker" />



</androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
    </ScrollView>
</layout>